Fixed a styling for an image where the head was cut off

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -104,6 +104,11 @@ body {
     padding-right: 100px;
     padding-bottom: 350px;
 }
+
+.carouselContainer .imageWrapper:nth-child(15){
+    margin-top: 300px;
+}
+
 .carouselContainer .imageWrapper:nth-child(22){
     margin-left: 400px;
 }
